src/objects/LASH_Portal_User_Setup__c.object
<CustomObject>
    <description>TJ July 14 : Portal Object : This will store the custom user details</description>
    <fields>
        <fullName>LASH_Custom_UserName__c</fullName>
        <description>This is store the custom user Name</description>
        <label>Custom UserName</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_First_Login_Failed_Time__c</fullName>
        <label>First Login Failed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LASH_LastPasswordChangeDate__c</fullName>
        <description>For storing the last Password change/ Reset date</description>
        <label>LastPasswordChangeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LASH_No_of_Invalid_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Invalid Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Password_Status__c</fullName>
        <formula>IF(((Now()-LASH_LastPasswordChangeDate__c) &gt;  LASH_Subscription_Password_Policy__c), &quot;Expired&quot;, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_1__c</fullName>
        <description>Store the Answer</description>
        <label>Portal User Answer 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_2__c</fullName>
        <description>Store the Answer</description>
        <label>Portal User Answer 2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Answer_3__c</fullName>
        <description>Store the Answer</description>
        <label>Portal User Answer 3</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_1__c</fullName>
        <description>Store the Question</description>
        <label>Portal User Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_2__c</fullName>
        <description>Store the Question</description>
        <label>Portal User Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_Portal_User_Question_3__c</fullName>
        <description>Store the Question</description>
        <label>Portal User Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LASH_QDE_External_ID__c</fullName>
        <description>This field is created as part of QDE Module</description>
        <externalId>true</externalId>
        <label>QDE External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_SFDC_Username__c</fullName>
        <formula>LASH_User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_Subscription_Password_Policy__c</fullName>
        <formula>LASH_Subscription__r.LASH_Subscription_expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Password Policy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LASH_Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It will have the Subscription details</description>
        <label>Subscription</label>
        <referenceTo>LASH_Subscription__c</referenceTo>
        <relationshipLabel>Portal User Setup</relationshipLabel>
        <relationshipName>Portal_User_Setup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_Temporary_Password_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(LASH_LastPasswordChangeDate__c)),null,IF(((Now()- CreatedDate) &gt;= LASH_Subscription__r.LASH_Temporary_Password_Expiration__c), &quot;Expired&quot;, &quot;Active&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Password Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_UserID__c</fullName>
        <formula>LASH_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_User_Email_ID__c</fullName>
        <formula>LASH_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Email ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASH_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>it will store the Saleforce username . it is mandatory field</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_User_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LASH_User_isActive__c</fullName>
        <formula>$User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LASH_isFirstLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a new record is created for a user this checkbox is checked, after user logs in for the first time this check box is unchecked</description>
        <label>isFirstLogin</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal User Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LASH_User__c</columns>
        <columns>LASH_Custom_UserName__c</columns>
        <columns>LASH_First_Login_Failed_Time__c</columns>
        <columns>LASH_isFirstLogin__c</columns>
        <columns>LASH_LastPasswordChangeDate__c</columns>
        <columns>LASH_No_of_Invalid_Attempts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portal User Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal User Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>